작성 일기 확인 API 관련 오류 수정
